# argus

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scheduled-tasks/: README.md
scheduled-tasks/argus-scan/: SKILL.md
src/argus/: __init__.py  __main__.py  classifier.py  cli.py  config.py  models.py  storage.py
src/argus/deliver/: __init__.py  slack.py  whatsapp.py
src/argus/sources/: __init__.py  feedly.py  rss.py  web.py
tests/: test_classifier.py
